<resources>

    <string name="db_initialized">La base de données a été initialisée.</string>

    <!-- CHEVAL -->

    <string name="app_name">Cavalier</string>
    <string name="drawer_open">Cavalier</string>
    <string name="drawer_close">Sous menu</string>

    <string name="action_settings">Settings</string>

    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="fermer">Fermer</string>

    <!-- Action -->
    <string name="action_save">Sauvegarder</string>
    <string name="action_close">Annuler</string>
    <string name="action_end">Fermer</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_init_data">Initialiser les données</string>
    <string name="action_filter">Filtrer</string>
    <string name="action_applay">Appliquer</string>
    <string name="action_planning">Planning</string>

    <string name="title_activity_list_moniteur">Moniteurs</string>
    <string name="title_activity_list_cavalier">Cavaliers</string>
    <string name="title_activity_add_personne">Personne</string>
    <string name="title_activity_list_monture">Montures</string>
    <string name="title_activity_add_monture">Monture</string>
    <string name="title_activity_list_cours">Reprises</string>
    <string name="title_activity_add_cours">Nouvelle reprise</string>
    <string name="title_activity_filter">Filtrer</string>
    <string name="title_activity_add_evenement">Soin</string>
    <string name="title_activity_add_carte">Carte</string>


    <!--Home-->
    <string name="title_home_moniteurs">Moniteurs</string>
    <string name="title_home_cavaliers">Cavaliers</string>
    <string name="title_home_montures">Montures</string>
    <string name="title_home_add_cours">Nouvelle reprise</string>
    <string name="title_home_list_cours">Reprises</string>

    <!-- Genre -->
    <string name="genre_etalon">Etalon</string>
    <string name="genre_hongre">Hongre</string>
    <string name="genre_jument">Jument</string>
    <string name="genre_poulin">Poulin</string>
    <string name="genre_pouliche">Pouliche</string>
    <string name="genre_masculin">Masculin</string>
    <string name="genre_feminin">Féminin</string>

    <!-- Unite -->
    <string name="unite_kg">Kg</string>
    <string name="unite_litre">L</string>

    <!-- Type lieu -->
    <string name="type_lieu_ecurie">Ecurie</string>
    <string name="type_lieu_carriere">Carrière</string>
    <string name="type_lieu_manege">Manège</string>
    <string name="type_lieu_exterieur">Exterieur</string>
    <string name="type_lieu_club_house">Club house</string>
    <string name="type_lieu_autre">Autre</string>

    <!-- Type evenement -->
    <string name="type_evenement_ferrage">Ferrage</string>
    <string name="type_evenement_parage">Parage</string>
    <string name="type_evenement_vaccin">Vaccin</string>
    <string name="type_evenement_vermifuge">Vermifuge</string>
    <string name="type_evenement_dent">Dentiste</string>
    <string name="type_evenement_ostheopathie">Ostheopathie</string>
    <string name="type_evenement_goudron">Goudron et graisse</string>
    <string name="type_evenement_autre">Autre</string>

    <!-- Type personne -->
    <string name="type_personne_moniteur">Moniteur</string>
    <string name="type_personne_cavalier">Cavalier</string>

    <!-- Mandatory -->
    <string name="nom_mandatory">Le nom est obligatoire</string>
    <string name="prenom_mandatory">Le prénom est obligatoire</string>
    <string name="duree_mandatory">Le durée est obligatoire</string>
    <string name="carte_mandatory">Le nom et la capacité sont obligatoires</string>

    <!--Personne-->
    <string name="personne_save">La personne est sauvegardée</string>
    <string name="personne_delete">La personne est supprimée</string>
    <string name="image_delete">Suppression de l\'image ?</string>


    <!--Monture-->
    <string name="monture_save">La monture est sauvegardée</string>
    <string name="monture_delete">La monture est supprimée</string>
    <string name="evenement_delete">Soin supprimé</string>
    <string name="evenement_save">Soin sauvegardé</string>
    <string name="monture_color">Couleur pour le planning</string>

    <!--Cours-->
    <string name="cours_save">La reprise est sauvegardée</string>
    <string name="cours_delete">La reprise est supprimée</string>

    <!--Graphique-->
    <string name="title_activity_chart_cavalier">Par cavalier</string>
    <string name="title_activity_chart_monture">Par monture</string>
    <string name="menu_chart">Graphiques</string>
    <string name="menu_barchartbycavalier">Reprises par cavalier</string>
    <string name="menu_barchartbymonture">Reprises par monture</string>
    <string name="menu_piechartbycavalier">Reprises par cavalier</string>
    <string name="menu_piechartbymonture">Reprises par monture</string>

    <string name="opt_inconnu">Inconnu</string>

    <!--Export-->
    <string name="menu_export_db">Exporter la base de données</string>
    <string name="menu_import_ok">Import du fichier réussi</string>
    <string name="import_reload_list">Rafraichissez la page</string>

    <!--URL-->
    <string name="menu_http">Liens</string>
    <string name="menu_kath">Kath Equitation</string>
    <string name="menu_hippologie">Hippologie</string>

    <string name="galop0">Débutant</string>
    <string name="galop1">Galop 1</string>
    <string name="galop2">Galop 2</string>
    <string name="galop3">Galop 3</string>
    <string name="galop4">Galop 4</string>
    <string name="galop5">Galop 5</string>
    <string name="galop6">Galop 6</string>
    <string name="galop7">Galop 7</string>

    <!--Planning-->
    <string name="planning_save">L\'évènement est sauvegardé</string>
    <string name="planning_delete">L\'évènement est supprimé</string>
    <string name="title_activity_add_planning">Ajouter un évènement</string>
    <string name="title_activity_delete_planning">Supprimer l\'évènement</string>
    <string name="title_activity_update_planning">Evènement</string>

    <string name="title_activity_add_note">Note</string>
    <string name="title_activity_update_note">Note</string>
    <string name="note_save">La note est sauvegardée</string>
    <string name="note_delete">La note est supprimée</string>
    <string name="title_activity_delete_note">Supprimer la note</string>

    <string name="planning_cours">Reprise</string>
    <string name="planning_cours_planifie">Reprise planifiée</string>
    <string name="planning_note">Note</string>

    <string name="action_today">Affichage: </string>
    <string name="action_day_view">Aujourd\'hui</string>
    <string name="action_three_day_view">Vue 3 jours</string>
    <string name="action_week_view">Vue hebdomadaire</string>
    <string name="action_transform_reprise">Transformer en reprise</string>
    <string name="action_transform_reprise_ok">Reprise sauvegarder</string>

    <!--Carte-->
    <string name="carte_save">La carte est sauvegardé</string>
    <string name="carte_delete">La carte est supprimée</string>

    <!--Taquin-->
    <string name="title_activity_taquin">Taquin</string>



</resources>
