<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tankbattle.activity.ListMontureActivity">

    <item android:id="@+id/chart"
        android:icon="@drawable/rep"
        android:title="@string/menu_chart"
        android:showAsAction="always">

        <menu>

            <item android:id="@+id/barchartbycavalier"
                android:title="@string/menu_barchartbycavalier"
                android:icon="@drawable/barchart"
                />

            <item android:id="@+id/barchartbymonture"
                android:title="@string/menu_barchartbymonture"
                android:icon="@drawable/rep"
                />

            <item android:id="@+id/piechartbycavalier"
            android:title="@string/menu_piechartbycavalier"
            android:icon="@drawable/piechart"
            />


            <item android:id="@+id/piechartbymonture"
                android:title="@string/menu_piechartbymonture"
                android:icon="@drawable/chart"
                />


        </menu>
    </item>

    <item android:id="@+id/action_close_list"
        android:title="@string/action_close"
        app:icon="@drawable/smallexit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_import"
        android:title="Import"
        app:icon="@drawable/import_data"
        app:showAsAction="ifRoom" />

</menu>
