<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add_planning"
        android:title="@string/action_save"
        app:icon="@drawable/smallsave"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_transform_reprise"
        android:title="@string/action_transform_reprise"
        app:icon="@drawable/cheval"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_close_planning"
        android:title="@string/action_close"
        app:icon="@drawable/smallexit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_planning"
        android:title="@string/action_delete"
        app:icon="@drawable/delete"
        app:showAsAction="ifRoom" />

</menu>
