<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tankbattle.activity.AddTankActivity">


    <item android:id="@+id/action_add_equipe"
        android:title="@string/action_save"
        android:orderInCategory="100"
        app:icon="@drawable/smallsave"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_close_equipe"
        android:title="@string/action_close"
        android:orderInCategory="100"
        app:icon="@drawable/smallclose"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_equipe"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        app:icon="@drawable/delete"
        app:showAsAction="ifRoom" />

</menu>
