<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/link"
        android:icon="@drawable/link"
        android:title="@string/menu_http"
        android:showAsAction="ifRoom">

        <menu>
            <!--<item-->
                <!--android:id="@+id/kath"-->
                <!--android:title="@string/menu_kath"-->
                <!--app:icon="@drawable/link"/>-->

            <item
                android:id="@+id/hippologie"
                android:title="@string/menu_hippologie"
                app:icon="@drawable/link"/>

        </menu>
    </item>

    <item
        android:id="@+id/export_db"
        android:title="@string/menu_export_db"
        app:icon="@drawable/backup"
        app:showAsAction="never" />

</menu>
